# twitch-transcriber

./: .gitignore  .python-version  pyproject.toml
twitch_transcriber/: main.py
